@@ -7,15 +7,17 @@ import com.msusuarios.repository.UsuarioRepository;
 import com.msusuarios.service.UsuarioService;
 import com.msusuarios.service.OtpService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/usuarios")
+@RequestMapping("/api/auth")
 @RequiredArgsConstructor
 public class AuthController {
 
@@ -24,23 +26,87 @@ public class AuthController {
     private final OtpService otpService;
     private final UsuarioRepository usuarioRepository;
 
-    // ✅ LOGIN
-    @RequestMapping(value = "/login", method = RequestMethod.POST, produces = "application/json")
-    public ResponseEntity<?> login(@RequestBody LoginRequestDTO loginRequest) {
-        Usuario usuario = usuarioService.findByUsername(loginRequest.getUsername());
-        String token = usuarioService.login(loginRequest);
+    @Autowired
+    private PasswordEncoder passwordEncoder;
 
-        // extraer permisos desde sus roles
+    // ✅ LOGIN
+    @PostMapping("/login")
+    public ResponseEntity<?> login(@RequestBody LoginRequestDTO loginRequest) {
+        // 🧠 Buscar usuario por username
+        Usuario usuario = usuarioService.findByUsername(loginRequest.getUsername());
+
+        // 🔐 Validar contraseña
+        if (!passwordEncoder.matches(loginRequest.getPassword(), usuario.getPassword())) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(
+                    Map.of("success", false, "message", "❌ Contraseña incorrecta")
+            );
+        }
+
+        // 🔑 Generar tokens
+        String accessToken = jwtTokenProvider.generateToken(usuario);
+        String refreshToken = jwtTokenProvider.generateRefreshToken(usuario);
+
+        // 💾 Guardar refresh token en BD
+        usuario.setRefreshToken(refreshToken);
+        usuarioRepository.save(usuario);
+
+        // 🎯 Obtener permisos desde los roles
         List<String> permisos = usuario.getRoles().stream()
                 .flatMap(r -> r.getRole().getPermisos().stream())
                 .map(p -> p.getPermission().getName())
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
 
+        // 📦 Retornar respuesta
         return ResponseEntity.ok(Map.of(
                 "success", true,
-                "token", token,
+                "token", accessToken,
+                "refreshToken", refreshToken,
+                "username", usuario.getUsername(),
                 "permisos", permisos
+        ));
+    }
+
+
+    // ♻ REFRESH TOKEN
+    @PostMapping("/refresh")
+    public ResponseEntity<?> refresh(@RequestBody Map<String, String> body) {
+        String refreshToken = body.get("refreshToken");
+
+        System.out.println("🔎 TOKEN RECIBIDO ===> " + refreshToken);
+
+        if (refreshToken == null || refreshToken.isBlank()) {
+            return ResponseEntity.badRequest().body(
+                    Map.of("success", false, "message", "❌ refreshToken no enviado")
+            );
+        }
+
+        if (!jwtTokenProvider.validateToken(refreshToken)) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(
+                    Map.of("success", false, "message", "❌ Refresh token inválido o expirado")
+            );
+        }
+
+        String userIdStr = jwtTokenProvider.getUserIdFromToken(refreshToken);
+        UUID userId = UUID.fromString(userIdStr);
+
+        Usuario usuario = usuarioRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("❌ Usuario no encontrado"));
+
+        if (!refreshToken.equals(usuario.getRefreshToken())) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(
+                    Map.of("success", false, "message", "❌ Refresh token no coincide con el registrado")
+            );
+        }
+
+        // ✅ Solo generamos un nuevo accessToken
+        String nuevoAccessToken = jwtTokenProvider.generateToken(usuario);
+
+        // ❌ No se rota el refreshToken
+        return ResponseEntity.ok(Map.of(
+                "success", true,
+                "accessToken", nuevoAccessToken,
+                "refreshToken", refreshToken // Se reusa el mismo
         ));
     }
 
@@ -51,13 +117,10 @@ public class AuthController {
     public ResponseEntity<Map<String, Object>> generateOtp(@RequestBody GenerateOtpRequest request) {
         String email = request.getEmail();
 
-        // 📌 Verifica si ya existe un usuario con ese email
         Optional<Usuario> usuarioOpt = usuarioRepository.findByEmailIgnoreCase(email);
 
         if (usuarioOpt.isPresent()) {
             Usuario existente = usuarioOpt.get();
-
-            // 🚫 Si ya está activo, no se genera OTP
             if ("active".equalsIgnoreCase(existente.getStatus())) {
                 return ResponseEntity.badRequest().body(Map.of(
                         "success", false,
@@ -66,7 +129,6 @@ public class AuthController {
             }
         }
 
-        // ✅ Si no está registrado o está inactivo, se envía el OTP
         otpService.enviarOtp(email);
 
         return ResponseEntity.ok(Map.of(
@@ -74,7 +136,6 @@ public class AuthController {
                 "message", "✅ OTP enviado exitosamente."
         ));
     }
-
 
     // ✅ VERIFICAR OTP
     @PostMapping("/verificar-otp")
@@ -89,9 +150,8 @@ public class AuthController {
     // ✅ REGISTRAR USUARIO FINAL
     @PostMapping("/register")
     public ResponseEntity<Map<String, Object>> register(@RequestBody RegisterRequest registerRequest) {
-        return usuarioService.registrarUsuarioFinal(registerRequest); // ✅ usar el response real
+        return usuarioService.registrarUsuarioFinal(registerRequest);
     }
-
 
     // ✅ BUSCAR DATOS TEMPORALES POR EMAIL
     @GetMapping("/buscar-por-email")
